// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SortBar Component Test renders ItemCard with images 1`] = `
<View
  style={
    Object {
      "width": "100%",
    }
  }
>
  <View
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "backgroundColor": "#ffffffff",
        "flexDirection": "row",
        "opacity": 1,
        "padding": 5,
        "width": "100%",
      }
    }
    testID="itemCard"
  >
    <View>
      <View
        style={
          Array [
            Object {
              "overflow": "hidden",
            },
            Object {
              "height": 80,
              "width": 80,
            },
          ]
        }
      >
        <FastImageView
          defaultSource={null}
          onFastImageError={[Function]}
          resizeMode="contain"
          source={null}
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        />
      </View>
    </View>
    <View
      style={
        Object {
          "flexDirection": "column",
          "flexShrink": 1,
          "justifyContent": "space-around",
          "padding": 5,
        }
      }
      testID="item-details"
    >
      <View>
        <Text
          style={
            Object {
              "color": "#616161",
              "flexShrink": 1,
              "flexWrap": "wrap",
              "fontSize": 12,
            }
          }
        >
          [missing "en.GENERICS.ITEM" translation] 1234
        </Text>
      </View>
      <View>
        <Text
          style={
            Object {
              "flexShrink": 1,
              "flexWrap": "wrap",
              "fontSize": 14,
              "marginVertical": 2,
            }
          }
        >
          test item
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`SortBar Component Test renders ItemCard without onHands quantity 1`] = `
<View
  style={
    Object {
      "width": "100%",
    }
  }
>
  <View
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "backgroundColor": "#ffffffff",
        "flexDirection": "row",
        "opacity": 1,
        "padding": 5,
        "width": "100%",
      }
    }
    testID="itemCard"
  >
    <View>
      <View
        style={
          Array [
            Object {
              "overflow": "hidden",
            },
            Object {
              "height": 80,
              "width": 80,
            },
          ]
        }
      >
        <FastImageView
          defaultSource={null}
          onFastImageError={[Function]}
          resizeMode="contain"
          source={
            Object {
              "priority": "normal",
              "uri": "https://assets.sams.com.mx/image/upload/f_auto,q_auto:eco,w_350,c_scale,dpr_auto/mx/images/product-images/img_medium/1234m.jpg",
            }
          }
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        />
      </View>
    </View>
    <View
      style={
        Object {
          "flexDirection": "column",
          "flexShrink": 1,
          "justifyContent": "space-around",
          "padding": 5,
        }
      }
      testID="item-details"
    >
      <View>
        <Text
          style={
            Object {
              "color": "#616161",
              "flexShrink": 1,
              "flexWrap": "wrap",
              "fontSize": 12,
            }
          }
        >
          [missing "en.GENERICS.ITEM" translation] 1234
        </Text>
      </View>
      <View>
        <Text
          style={
            Object {
              "flexShrink": 1,
              "flexWrap": "wrap",
              "fontSize": 14,
              "marginVertical": 2,
            }
          }
        >
          test item
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`SortBar Component Test renders default ItemCard when loading is false 1`] = `
<View
  style={
    Object {
      "width": "100%",
    }
  }
>
  <View
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "backgroundColor": "#ffffffff",
        "flexDirection": "row",
        "opacity": 1,
        "padding": 5,
        "width": "100%",
      }
    }
    testID="itemCard"
  >
    <View>
      <View
        style={
          Array [
            Object {
              "overflow": "hidden",
            },
            Object {
              "height": 80,
              "width": 80,
            },
          ]
        }
      >
        <FastImageView
          defaultSource={null}
          onFastImageError={[Function]}
          resizeMode="contain"
          source={
            Object {
              "priority": "normal",
              "uri": "https://assets.sams.com.mx/image/upload/f_auto,q_auto:eco,w_350,c_scale,dpr_auto/mx/images/product-images/img_medium/1234m.jpg",
            }
          }
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        />
      </View>
    </View>
    <View
      style={
        Object {
          "flexDirection": "column",
          "flexShrink": 1,
          "justifyContent": "space-around",
          "padding": 5,
        }
      }
      testID="item-details"
    >
      <View>
        <Text
          style={
            Object {
              "color": "#616161",
              "flexShrink": 1,
              "flexWrap": "wrap",
              "fontSize": 12,
            }
          }
        >
          [missing "en.GENERICS.ITEM" translation] 1234
        </Text>
      </View>
      <View>
        <Text
          style={
            Object {
              "flexShrink": 1,
              "flexWrap": "wrap",
              "fontSize": 14,
              "marginVertical": 2,
            }
          }
        >
          test item
        </Text>
      </View>
      <View>
        <Text
          style={
            Object {
              "color": "#616161",
              "flexShrink": 1,
              "flexWrap": "wrap",
              "fontSize": 12,
            }
          }
        >
          [missing "en.ITEM.ON_HANDS" translation] 12
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`SortBar Component Test renders default ItemCard when loading is true 1`] = `
<View
  style={
    Object {
      "width": "100%",
    }
  }
>
  <View
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "backgroundColor": "#f4f4f9",
        "flexDirection": "row",
        "opacity": 1,
        "padding": 5,
      }
    }
    testID="itemCard"
  >
    <View>
      <View
        style={
          Array [
            Object {
              "overflow": "hidden",
            },
            Object {
              "height": 80,
              "width": 80,
            },
          ]
        }
      >
        <FastImageView
          defaultSource={null}
          onFastImageError={[Function]}
          resizeMode="contain"
          source={
            Object {
              "priority": "normal",
              "uri": "https://assets.sams.com.mx/image/upload/f_auto,q_auto:eco,w_350,c_scale,dpr_auto/mx/images/product-images/img_medium/1234m.jpg",
            }
          }
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        />
      </View>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "bottom": 0,
          "justifyContent": "center",
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
      testID="loader"
    >
      <ActivityIndicator
        size={30}
      />
    </View>
  </View>
</View>
`;
